dev/apigateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: backend-dev
spec:
  selector:
    app: apigateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
