dev/apigateway/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apigateway-route
spec:
  to:
    kind: Service
    name: apigateway
  port:
    targetPort: 8080
  tls:
    termination: edge
